@@ -1,6 +1,6 @@
 // TortoiseMerge - a Diff/Patch program
 
-// Copyright (C) 2003-2011 - TortoiseSVN
+// Copyright (C) 2003-2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -252,12 +252,12 @@ protected:  // methods
     afx_msg void    OnNavigatePrevinlinediff();
     afx_msg void    OnKeyDown(UINT nChar, UINT nRepCnt, UINT nFlags);
     afx_msg void    OnLButtonDown(UINT nFlags, CPoint point);
+    afx_msg void    OnLButtonUp(UINT nFlags, CPoint point);
     afx_msg void    OnLButtonDblClk(UINT nFlags, CPoint point);
     virtual void    OnLButtonTrippleClick(UINT nFlags, CPoint point);
     afx_msg void    OnEditCopy();
     afx_msg void    OnMouseMove(UINT nFlags, CPoint point);
     afx_msg void    OnTimer(UINT_PTR nIDEvent);
-    afx_msg void    OnMouseLeave();
     afx_msg void    OnChar(UINT nChar, UINT nRepCnt, UINT nFlags);
     afx_msg void    OnCaretDown();
     afx_msg void    OnCaretLeft();
@@ -392,7 +392,6 @@ protected:  // variables
     BOOL            m_bFocused;
     BOOL            m_bViewLinenumbers;
     BOOL            m_bIsHidden;
-    BOOL            m_bMouseWithin;
     BOOL            m_bIconLFs;
     int             m_nLineHeight;
     int             m_nCharWidth;
